<resources>
    <string name="app_name">FRIENDS \nNOTE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_note">Note</string>
    <string name="menu_test">Bottom Sheet Dialog</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_about">About</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_todo">Todo List</string>
    <string name="about_app">About App</string>
</resources>
