<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_profile">

    <fragment
        android:id="@+id/nav_note"
        android:name="com.pengdst.note_ink.ui.page.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pengdst.note_ink.ui.page.gallery.GalleryFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.pengdst.note_ink.ui.page.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.pengdst.note_ink.ui.page.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.pengdst.note_ink.ui.page.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_note"
            app:destination="@id/nav_note"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_profile_to_nav_todo"
            app:destination="@id/nav_todo"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.pengdst.note_ink.ui.page.todo.TodoFragment"
        android:label="@string/menu_todo"
        tools:layout="@layout/fragment_todo" />
</navigation>